--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "b80764ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "9461041c",
    "metadata": {},
    "outputs": [
@@ -12,36 +20,58 @@
      "text": [
       "Attempting to load model from S3: my-feature-store-data/models/best_model.pkl\n",
       "Model file exists at my-feature-store-data/models/best_model.pkl\n",
-      "Could not load model: expected str, bytes or os.PathLike object, not BytesIO. Training new model.\n",
+      "📦 Model saved with scikit-learn 1.5.2, numpy 1.26.4\n",
+      "🧪 Current scikit-learn: 1.5.2, numpy: 1.26.4\n",
+      "✅ Successfully loaded pre-trained model from S3\n",
       "\n",
       "Model Performance:\n",
       "  Target: aqi_index\n",
-      "    RMSE: 0.2403\n",
-      "    MAE: 0.1190\n",
-      "    R²: 0.9314\n",
+      "    RMSE: 2.0074\n",
+      "    MAE: 1.8090\n",
+      "    R²: -3.7883\n",
       "  Target: Calculated_AQI\n",
-      "    RMSE: 7.1532\n",
-      "    MAE: 1.5156\n",
-      "    R²: 0.9952\n",
+      "    RMSE: 124.7729\n",
+      "    MAE: 78.7451\n",
+      "    R²: -0.4681\n",
       "\n",
       "Predicted values for the next 3 days:\n",
       "         Date  Predicted_AQI  Predicted_Calculated_AQI\n",
-      "0  2025-04-30           3.64                    232.20\n",
-      "1  2025-05-01           3.57                    233.17\n",
-      "2  2025-05-02           3.58                    232.26\n",
+      "0  2025-05-01           2.31                    177.63\n",
+      "1  2025-05-02           2.31                    177.63\n",
+      "2  2025-05-03           2.31                    177.63\n",
       "\n",
-      "Top 10 most important features:\n",
-      "           Feature  Importance\n",
-      "7             pm10    0.444113\n",
-      "1               co    0.379451\n",
-      "0            index    0.132354\n",
-      "6            pm2_5    0.018193\n",
-      "5              so2    0.009151\n",
-      "4               o3    0.006023\n",
-      "3              no2    0.004908\n",
-      "9   temperature_2m    0.001786\n",
-      "8              nh3    0.001293\n",
-      "12  wind_speed_10m    0.000457\n",
+      "Top 10 most important features (from first target model):\n",
+      "                 Feature  Importance\n",
+      "6                  pm2_5    0.873170\n",
+      "7                   pm10    0.107621\n",
+      "4                     o3    0.016397\n",
+      "0                  index    0.001109\n",
+      "8                    nh3    0.000292\n",
+      "21                   day    0.000252\n",
+      "5                    so2    0.000236\n",
+      "3                    no2    0.000182\n",
+      "22                  hour    0.000169\n",
+      "10  relative_humidity_2m    0.000146\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Retrained model saved to S3.\n",
       "Scaler saved to S3.\n",
@@ -62,6 +92,8 @@
     "import boto3\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "import json\n",
+    "\n",
     "\n",
     "# Load environment variables\n",
     "load_dotenv()\n",
@@ -105,29 +137,51 @@
     "# --- Step 2: Load or Train Model ---\n",
     "try:\n",
     "    model_key = 'models/best_model.pkl'\n",
+    "    metadata_key = 'models/best_model_metadata.json'\n",
+    "\n",
     "    print(f\"Attempting to load model from S3: {bucket_name}/{model_key}\")\n",
-    "    \n",
+    "\n",
     "    # Check if model exists\n",
     "    s3.get_object(Bucket=bucket_name, Key=model_key)\n",
     "    print(f\"Model file exists at {bucket_name}/{model_key}\")\n",
-    "    # Download model\n",
+    "\n",
+    "    # --- Load metadata and check versions ---\n",
+    "    metadata_obj = s3.get_object(Bucket=bucket_name, Key=metadata_key)\n",
+    "    metadata_content = metadata_obj['Body'].read().decode('utf-8')\n",
+    "    metadata = json.loads(metadata_content)\n",
+    "\n",
+    "    saved_sklearn = metadata.get(\"sklearn_version\", \"unknown\")\n",
+    "    saved_numpy = metadata.get(\"numpy_version\", \"unknown\")\n",
+    "\n",
+    "    import sklearn\n",
+    "    import numpy as np\n",
+    "    from packaging import version\n",
+    "\n",
+    "    print(f\"📦 Model saved with scikit-learn {saved_sklearn}, numpy {saved_numpy}\")\n",
+    "    print(f\"🧪 Current scikit-learn: {sklearn.__version__}, numpy: {np.__version__}\")\n",
+    "\n",
+    "    if version.parse(sklearn.__version__) != version.parse(saved_sklearn):\n",
+    "        print(\"⚠️ Warning: scikit-learn version mismatch.\")\n",
+    "    if version.parse(np.__version__) != version.parse(saved_numpy):\n",
+    "        print(\"⚠️ Warning: numpy version mismatch.\")\n",
+    "\n",
+    "    # --- Load model ---\n",
     "    model_buffer = BytesIO()\n",
-    "    with open(model_buffer, 'wb') as f:\n",
-    "        s3.download_fileobj(bucket_name, model_key, f)\n",
+    "    s3.download_fileobj(Bucket=bucket_name, Key=model_key, Fileobj=model_buffer)\n",
     "    model_buffer.seek(0)\n",
-    "    # Load model\n",
-    "    print(\"Loading model...\")\n",
     "    model = joblib.load(model_buffer)\n",
-    "    print(\"Successfully loaded pre-trained model from S3\") \n",
+    "    print(\"✅ Successfully loaded pre-trained model from S3\")\n",
+    "\n",
     "    y_pred = model.predict(test_scaled) \n",
     "    Y_predicted = y_pred\n",
+    "\n",
     "except Exception as e:\n",
-    "    print(f\"Could not load model: {str(e)}. Training new model.\")\n",
-    "    # Train new model\n",
+    "    print(f\"❌ Could not load model: {str(e)}. Training new model.\")\n",
     "    model = RandomForestRegressor(n_estimators=300, random_state=42)\n",
     "    model.fit(X_train_scaled, y_train)\n",
     "    y_pred = model.predict(test_scaled)\n",
     "    Y_predicted = y_pred\n",
+    "\n",
     "\n",
     "# --- Step 3: Evaluate Model ---\n",
     "\n",
@@ -246,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "773da10b",
    "metadata": {},
    "outputs": [],
