--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -12,6 +12,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "77acf141",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "# Replace these values\n",
+    "bucket_name = \"my-feature-store-data\"\n",
+    "file_path = \"./aqi_weather_data.csv\"\n",
+    "s3_key = \"raw-data/aqi_weather_data.csv\"\n",
+    "\n",
+    "\n",
+    "# Initialize the S3 client\n",
+    "s3 = boto3.client(\n",
+    "    's3',\n",
+    "    aws_access_key_id= os.environ.get('AWS_ACCESS_KEY_ID'),\n",
+    "    aws_secret_access_key=os.environ.get('AWS_SECRET_ACCESS_KEY'),\n",
+    ")\n",
+    "# download the json file\n",
+    "s3.download_file(bucket_name, s3_key, file_path)\n",
+    "\n",
+    "print(f\"✅ Uploaded {file_path} to s3://{bucket_name}/{s3_key}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "8413ece5",
    "metadata": {},
