--- a/feature_extract_from_api_hourly.ipynb
+++ b/feature_extract_from_api_hourly.ipynb
@@ -136,11 +136,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8b38a31e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Uploaded ./historical_aqi_weather_data.json to s3://my-feature-store-data/raw-data/historical_aqi_weather_data.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "# Replace these values\n",
+    "bucket_name = \"my-feature-store-data\"\n",
+    "file_path = \"./historical_aqi_weather_data.json\"\n",
+    "s3_key = \"raw-data/historical_aqi_weather_data.json\"\n",
+    "\n",
+    "\n",
+    "# Initialize the S3 client\n",
+    "s3 = boto3.client(\n",
+    "    's3',\n",
+    "    aws_access_key_id= os.environ.get('AWS_ACCESS_KEY_ID'),\n",
+    "    aws_secret_access_key=os.environ.get('AWS_SECRET_ACCESS_KEY'),\n",
+    ")\n",
+    "\n",
+    "# Upload the file\n",
+    "s3.upload_file(file_path, bucket_name, s3_key)\n",
+    "print(f\"✅ Uploaded {file_path} to s3://{bucket_name}/{s3_key}\")\n"
+   ]
   }
  ],
  "metadata": {
