--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -2,7 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "4adc93b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eaa8f536",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data with 4342 records\n"
+     ]
+    }
+   ],
+   "source": [
+    "bucket_name = 'my-feature-store-data'\n",
+    "data_key = 'raw-data/historical_aqi_weather_data.json'\n",
+    "        # Create S3 client\n",
+    "s3 = boto3.client(\n",
+    "    's3',\n",
+    "    aws_access_key_id=os.getenv('AWS_ACCESS_KEY_ID'),\n",
+    "    aws_secret_access_key=os.getenv('AWS_SECRET_ACCESS_KEY'),\n",
+    ")\n",
+    "\n",
+    "# Load dataset\n",
+    "obj = s3.get_object(Bucket=bucket_name, Key=data_key)\n",
+    "\n",
+    "\n",
+    "# Get the content from the object's body\n",
+    "data = json.loads(obj['Body'].read().decode('utf-8'))\n",
+    "\n",
+    "# Now 'data' contains your JSON data\n",
+    "print(f\"Loaded data with {len(data)} records\" if isinstance(data, list) else \"Loaded JSON data\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "983d9f0c",
    "metadata": {},
    "outputs": [],
@@ -10,9 +58,9 @@
     "import json\n",
     "import pandas as pd\n",
     "\n",
-    "# Load JSON file\n",
-    "with open('./historical_aqi_weather_data.json', 'r') as f:\n",
-    "    data = json.load(f)\n",
+    "# # Load JSON file\n",
+    "# with open('./historical_aqi_weather_data.json', 'r') as f:\n",
+    "#     data = json.load(f)\n",
     "\n",
     "records = []\n",
     "\n",
@@ -74,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "acd7f75f",
    "metadata": {},
    "outputs": [
@@ -138,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6e6e24f4",
    "metadata": {},
    "outputs": [
@@ -158,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d9ff493b",
    "metadata": {},
    "outputs": [
@@ -173,37 +221,37 @@
       "3           5.0  1375.20  0.01  48.67  26.82  10.73  79.89  121.13  11.02   \n",
       "4           4.0  1001.36  0.00  30.85  43.99   8.82  72.51  111.48   8.87   \n",
       "...         ...      ...   ...    ...    ...    ...    ...     ...    ...   \n",
-      "4335        4.0   113.41  0.00   0.11  61.93   0.43  38.76  129.78   0.00   \n",
-      "4336        4.0   113.63  0.01   0.05  72.76   0.43  44.26  161.20   0.00   \n",
       "4337        4.0   113.63  0.01   0.05  72.76   0.43  44.26  161.20   0.00   \n",
       "4338        4.0   113.97  0.01   0.07  68.93   0.48  44.69  162.71   0.00   \n",
       "4339        4.0   109.04  0.01   0.06  67.06   0.27  44.82  155.90   0.00   \n",
+      "4340        3.0   105.50  0.00   0.08  58.63   0.39  18.45   58.66   0.00   \n",
+      "4341        3.0   126.77  0.01   0.06  61.86   0.36  22.40   77.26   0.01   \n",
       "\n",
       "      temperature_2m  ...  wind_direction_10m  surface_pressure  dew_point_2m  \\\n",
-      "0              27.30  ...               314.0            1011.3          23.8   \n",
-      "1              26.80  ...               307.0            1011.2          24.0   \n",
-      "2              26.20  ...               323.0            1011.0          24.4   \n",
-      "3              26.00  ...               331.0            1010.9          24.9   \n",
-      "4              26.00  ...               322.0            1011.0          24.9   \n",
+      "0               27.3  ...               314.0            1011.3          23.8   \n",
+      "1               26.8  ...               307.0            1011.2          24.0   \n",
+      "2               26.2  ...               323.0            1011.0          24.4   \n",
+      "3               26.0  ...               331.0            1010.9          24.9   \n",
+      "4               26.0  ...               322.0            1011.0          24.9   \n",
       "...              ...  ...                 ...               ...           ...   \n",
-      "4335           27.30  ...               243.0            1005.6          23.7   \n",
-      "4336           40.09  ...               260.0            1006.0           NaN   \n",
-      "4337           26.20  ...               275.0            1003.9          23.1   \n",
-      "4338           26.20  ...               275.0            1003.9          23.1   \n",
-      "4339           34.80  ...               247.0            1004.6          23.1   \n",
+      "4337            26.2  ...               275.0            1003.9          23.1   \n",
+      "4338            26.2  ...               275.0            1003.9          23.1   \n",
+      "4339            34.8  ...               247.0            1004.6          23.1   \n",
+      "4340            27.9  ...               249.0            1004.9          25.2   \n",
+      "4341            33.9  ...               235.0            1001.3          23.6   \n",
       "\n",
       "      apparent_temperature  shortwave_radiation  et0_fao_evapotranspiration  \\\n",
-      "0                    31.50                  0.0                        0.03   \n",
-      "1                    30.90                  0.0                        0.02   \n",
-      "2                    30.30                  0.0                        0.02   \n",
-      "3                    30.50                  0.0                        0.00   \n",
-      "4                    30.60                  0.0                        0.00   \n",
+      "0                     31.5                  0.0                        0.03   \n",
+      "1                     30.9                  0.0                        0.02   \n",
+      "2                     30.3                  0.0                        0.02   \n",
+      "3                     30.5                  0.0                        0.00   \n",
+      "4                     30.6                  0.0                        0.00   \n",
       "...                    ...                  ...                         ...   \n",
-      "4335                 32.50                  0.0                        0.00   \n",
-      "4336                 40.86                  0.0                        0.00   \n",
-      "4337                 31.10                  0.0                        0.00   \n",
-      "4338                 31.10                  0.0                        0.00   \n",
-      "4339                 38.80                847.0                        0.72   \n",
+      "4337                  31.1                  0.0                        0.00   \n",
+      "4338                  31.1                  0.0                        0.00   \n",
+      "4339                  38.8                847.0                        0.72   \n",
+      "4340                  33.6                  0.0                        0.01   \n",
+      "4341                  38.5                899.0                        0.73   \n",
       "\n",
       "        year  month   day  hour  \n",
       "0     2024.0   10.0  22.0  19.0  \n",
@@ -212,13 +260,13 @@
       "3     2024.0   10.0  22.0  22.0  \n",
       "4     2024.0   10.0  22.0  23.0  \n",
       "...      ...    ...   ...   ...  \n",
-      "4335  2025.0    4.0  25.0  19.0  \n",
-      "4336  2025.0    4.0  26.0   7.0  \n",
       "4337  2025.0    4.0  26.0   7.0  \n",
       "4338  2025.0    4.0  26.0  11.0  \n",
       "4339  2025.0    4.0  27.0  10.0  \n",
+      "4340  2025.0    5.0   2.0  18.0  \n",
+      "4341  2025.0    5.0   4.0   9.0  \n",
       "\n",
-      "[4340 rows x 23 columns]\n"
+      "[4342 rows x 23 columns]\n"
      ]
     }
    ],
@@ -228,8 +276,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "230b76c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully uploaded CSV to S3: my-feature-store-data/raw-data/aqi_weather_data.csv\n",
+      "S3 URL: s3://my-feature-store-data/raw-data/aqi_weather_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Upload the CSV file to S3\n",
+    "try:\n",
+    "    # Define the S3 path for the processed data\n",
+    "    processed_data_key = 'raw-data/aqi_weather_data.csv'\n",
+    "    \n",
+    "    # Upload the file to S3\n",
+    "    s3.upload_file(\n",
+    "        Filename='aqi_weather_data.csv',\n",
+    "        Bucket=bucket_name,\n",
+    "        Key=processed_data_key\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"✅ Successfully uploaded CSV to S3: {bucket_name}/{processed_data_key}\")\n",
+    "    \n",
+    "    # Get the S3 URL for the uploaded file\n",
+    "    s3_url = f\"s3://{bucket_name}/{processed_data_key}\"\n",
+    "    print(f\"S3 URL: {s3_url}\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error uploading CSV to S3: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22462eaa",
    "metadata": {},
    "outputs": [],
    "source": []
