--- a/feature_extract_from_api_hourly.ipynb
+++ b/feature_extract_from_api_hourly.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "id": "987578bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "46740aec",
    "metadata": {},
    "outputs": [
@@ -11,6 +24,7 @@
      "output_type": "stream",
      "text": [
       "📍 Coordinates: 24.8546842, 67.0207055\n",
+      "✅ Successfully appended data to S3 bucket: my-feature-store-data/raw-data/historical_aqi_weather_data.json\n",
       "✅ Successfully saved current data with agricultural parameters\n"
      ]
     }
@@ -95,26 +109,52 @@
     "        print(f\"❌ Failed to fetch weather data: {response.text}\")\n",
     "        return None\n",
     "\n",
-    "# --- APPEND DATA ---\n",
-    "def append_to_json_array(file_path, new_entry):\n",
-    "    if os.path.exists(file_path):\n",
-    "        try:\n",
-    "            with open(file_path, \"r\") as f:\n",
-    "                data = json.load(f)\n",
-    "                if not isinstance(data, list):\n",
-    "                    data = []\n",
-    "        except json.JSONDecodeError:\n",
+    "# --- APPEND DATA TO S3 ---\n",
+    "def append_to_json_array(bucket_name, data_key, new_entry):\n",
+    "    \"\"\"\n",
+    "    Appends a new entry to JSON array stored in S3.\n",
+    "    \n",
+    "    Args:\n",
+    "        bucket_name: S3 bucket name\n",
+    "        data_key: S3 object key for the JSON file\n",
+    "        new_entry: New data entry to append\n",
+    "    \"\"\"\n",
+    "    # Initialize S3 client\n",
+    "    s3 = boto3.client(\n",
+    "        's3',\n",
+    "        aws_access_key_id=os.getenv('AWS_ACCESS_KEY_ID'),\n",
+    "        aws_secret_access_key=os.getenv('AWS_SECRET_ACCESS_KEY')\n",
+    "    )\n",
+    "    \n",
+    "    # Try to get existing data from S3\n",
+    "    try:\n",
+    "        obj = s3.get_object(Bucket=bucket_name, Key=data_key)\n",
+    "        data = json.loads(obj['Body'].read().decode('utf-8'))\n",
+    "        if not isinstance(data, list):\n",
     "            data = []\n",
-    "    else:\n",
+    "    except (s3.exceptions.NoSuchKey, json.JSONDecodeError):\n",
+    "        # File doesn't exist or is not valid JSON\n",
     "        data = []\n",
-    "\n",
+    "    \n",
+    "    # Append new entry\n",
     "    data.append(new_entry)\n",
-    "    with open(file_path, \"w\") as f:\n",
-    "        json.dump(data, f, indent=4)\n",
+    "    \n",
+    "    # Upload updated data back to S3\n",
+    "    s3.put_object(\n",
+    "        Bucket=bucket_name,\n",
+    "        Key=data_key,\n",
+    "        Body=json.dumps(data, indent=4),\n",
+    "        ContentType='application/json'\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"✅ Successfully appended data to S3 bucket: {bucket_name}/{data_key}\")\n",
     "\n",
     "# --- MAIN ---\n",
     "if __name__ == \"__main__\":\n",
     "    try:\n",
+    "        # S3 configuration\n",
+    "        bucket_name = 'my-feature-store-data'\n",
+    "        data_key = 'raw-data/historical_aqi_weather_data.json'\n",
     "        lat, lon = fetch_coordinates()\n",
     "        print(f\"📍 Coordinates: {lat}, {lon}\")\n",
     "        \n",
@@ -126,7 +166,7 @@
     "                \"aqi\": aqi_data,\n",
     "                \"weather\": weather_data\n",
     "            }\n",
-    "            append_to_json_array(OUTPUT_FILE, entry)\n",
+    "            append_to_json_array(bucket_name,data_key, entry)\n",
     "            print(f\"✅ Successfully saved current data with agricultural parameters\")\n",
     "        else:\n",
     "            print(\"⚠️ Failed to collect complete dataset\")\n",
